--- a/post.html
+++ b/post.html
@@ -48,11 +48,31 @@
 
 		<div class="img-container">
 
+			
+
 		</div>
+
+		<div class="pa3">
+			<h5>NES Emulator [WIP]</h5>
+			<div class="img-container">
+				<img class="pa3pp" src="images/nes2.jpg">
+				<p>An NES Emulator written in C++. A work in progress. I am currently working on the 6502 CPU emulation, and then plan on developing an 
+				application to run 6502 programs.
+				</p>
+				<ul>
+					<h6>Future Updates include:</h6>
+					<li>Mappers to have the CPU and other possible devices interact with each other </li><br>
+					<li>Using a PPU to render foregrounds and backgrounds, including sprites</li><br>
+					<li>Adding Controller Integration and input</li><br>
+					<li>Using an audio framework to add audio to the emulator</li><br>
+				</ul>
+			</div>
+			</div>
+		
 		<div class="pa1">
 		<h3>Bulls & Cows</h3>
         <img id="cow" src="images/p3.png">
-		<p>A word guessing game made in C++ incorporated with Unreal Engine</p>
+		<p>A word guessing game made in C++ incorporated with Unreal Engine.</p>
 		
 
 		<h5>Technologies:</h5>
@@ -61,6 +81,8 @@
             <li>- Unreal Engine</li>
 		</ul>
     </div>
+
+	
         <div class="pa2">
 		<h5>Student Roster Project</h5>
 		<div class="img-container">
@@ -88,6 +110,8 @@
             </ul>
 		</div>
     </div>
+
+	
 	</div>
 
 </body>
