--- a/post.html
+++ b/post.html
@@ -56,12 +56,11 @@
 			<h5>NES Emulator [WIP]</h5>
 			<div class="img-container">
 				<img class="pa3pp" src="images/nes2.jpg">
-				<p>An NES Emulator written in C++. A work in progress. I am currently working on the 6502 CPU emulation, and then plan on developing an 
-				application to run 6502 programs.
+				<p>An NES Emulator written in C++. A work in progress. I have currently finished making a 6502 CPU Emulation, and am currently working on adding the mappers and
+					the ability to read a cartridge through external hardware.
 				</p>
 				<ul>
 					<h6>Future Updates include:</h6>
-					<li>Mappers to have the CPU and other possible devices interact with each other </li><br>
 					<li>Using a PPU to render foregrounds and backgrounds, including sprites</li><br>
 					<li>Adding Controller Integration and input</li><br>
 					<li>Using an audio framework to add audio to the emulator</li><br>
