--- a/post.html
+++ b/post.html
@@ -28,7 +28,6 @@
 <body id="body" style="opacity: 0;">
 	<div class="nav-wrapper">
 
-		<!-- Link around dots-wrapper added after tutorial video -->
 		<a href="main.html">
 			<div class="dots-wrapper">
 				<div id="dot-1" class="browser-dot"></div>
@@ -56,7 +55,7 @@
 			<h5>NES Emulator [WIP]</h5>
 			<div class="img-container">
 				<img class="pa3pp" src="images/nes2.jpg">
-				<p>An NES Emulator written in C++. A work in progress. I have currently finished making a 6502 CPU Emulation, and am currently working on adding the mappers and
+				<p id ="bck">An NES Emulator written in C++. A work in progress. I have currently finished making a 6502 CPU Emulation, and am currently working on adding the mappers and
 					the ability to read a cartridge through external hardware.
 				</p>
 				<ul>
@@ -67,7 +66,21 @@
 				</ul>
 			</div>
 			</div>
+
+			<div class="pa1">
+				<h3>FreyBot</h3>
+				<img id="cow" src="images/discord.png">
+				<p>A discord bot written with NodeJS in conjunction with DiscordAPI. Currently used in some servers, being utilized as a music bot </p>
+				
 		
+				<h5>Technologies:</h5>
+				<ul>
+					<li>- NodeJS</li>
+					<li>- DiscordAPI</li>
+				</ul>
+			</div>
+
+
 		<div class="pa1">
 		<h3>Bulls & Cows</h3>
         <img id="cow" src="images/p3.png">
