--- a/post.html
+++ b/post.html
@@ -51,6 +51,23 @@
 
 		</div>
 
+
+		<div class="pa1">
+			<h5>Audify</h5>
+			<div class="img-container">
+				<img class="pa3pp" src="images/p5.png">
+				<p id ="bck">A music streaming website that allows you to create your own account, browse music, and make your own playlists! 
+				</p>
+				<ul>
+					<h6>Features Include:</h6>
+					<li>User Registration</li><br>
+					<li>Search Bar to find your favorite music</li><br>
+					<li>MySQL and PHP allow the user to create playlists</li><br>
+					<li>Ajax/JQuery/JavaScript are used for the dynamic music player/bar</li><br>
+				</ul>
+			</div>
+			</div>		
+
 		<div class="pa3">
 			<h5>NES Emulator [WIP]</h5>
 			<div class="img-container">
